test/tests/nek_errors/invalid_transfer_pp/cube.par
[OCCA]
  backend = CPU

[GENERAL]
  stopAt = numSteps
  numSteps = 10
  dt = 0.1
  polynomialOrder = 2
  writeControl = steps
  checkpointInterval = 10

[FLUID VELOCITY]
  solver = none
  residualTol = 1.0e-6
  boundaryTypeMap = inlet, outlet, wall, wall, wall, wall

[FLUID PRESSURE]
  residualTol = 1.0e-5

[SCALAR TEMPERATURE]
  conductivity = 2.5
  rhoCp = 1.0
  residualTol = 1.0e-10
  boundaryTypeMap = I, I, I, f, I, t
